some progress on penguins